mainApp/main/default/objects/Account/fields/check_data_migration__c.field-meta.xml
<CustomField>
    <fullName>check_data_migration__c</fullName>
    <label>check data migration</label>
    <length>32</length>
    <type>Text</type>
</CustomField>