mainApp/main/default/objects/Account/fields/CopadoTest3__c.field-meta.xml
<CustomField>
    <fullName>CopadoTest3__c</fullName>
    <label>CopadoTest3</label>
    <length>32</length>
    <type>Text</type>
</CustomField>